<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_general"
        android:checkableBehavior="none">

        <item
            android:id="@+id/halamanUtama"
            android:title="@string/halaman_utama"
            android:icon="@drawable/ic_dashboard_black_24dp"/>

        <item
            android:id="@+id/biodata"
            android:title="@string/biodata"
            android:icon="@drawable/icon_biodata"/>

        <item
            android:id="@+id/surat"
            android:title="@string/permintaan_surat"
            android:icon="@drawable/ic_email_black_24dp"/>



        <item
            android:id="@+id/chat"
            android:title="@string/chat_online"
            android:icon="@drawable/ic_chat_black_24dp"/>

        <item
            android:id="@+id/quran"
            android:title="@string/test_qur_an"
            android:icon="@drawable/ic_beenhere_black_24dp"/>

        <item
            android:id="@+id/uet"
            android:title="@string/uai_english_test"
            android:icon="@drawable/ic_beenhere_black_24dp"/>
    </group>

    <group
        android:id="@+id/menu_perkuliahan"
        android:checkableBehavior="none">

        <item
            android:id="@+id/akademik"
            android:title="@string/ringkasan_akademik"
            android:icon="@drawable/icon_akademik"/>

        <item
            android:id="@+id/keuangan"
            android:title="@string/keuangan"
            android:icon="@drawable/icon_keuangan"/>

        <item
            android:id="@+id/krs"
            android:title="@string/isi_krs"
            android:icon="@drawable/ic_border_color_black_24dp"/>

        <item
            android:id="@+id/perkuliahan"
            android:title="@string/perkuliahan"
            android:icon="@drawable/icon_perkuliahan"/>

        <item
            android:id="@+id/nilai"
            android:title="@string/nilai"
            android:icon="@drawable/icon_nilai"/>
    </group>

    <group
        android:id="@+id/menu_semester_pendek"
        android:checkableBehavior="none">

        <item
            android:id="@+id/sp_krs"
            android:title="@string/krs_semester_pendek"
            android:icon="@drawable/ic_border_color_black_24dp"/>

        <item
            android:id="@+id/sp_perkuliahan"
            android:title="Perkuliahan SP"
            android:icon="@drawable/icon_perkuliahan"/>

        <item
            android:id="@+id/sp_nilai"
            android:title="@string/nilai_sp"
            android:icon="@drawable/icon_nilai"/>
    </group>

    <group
        android:id="@+id/menu_pendaftaran"
        android:checkableBehavior="none">

        <item
            android:id="@+id/daftar_sidang"
            android:title="@string/daftar_sidang"
            android:icon="@drawable/icon_daftar_sidang"/>

        <item
            android:id="@+id/daftar_wisuda"
            android:title="@string/daftar_wisuda"
            android:icon="@drawable/icon_daftar_wisuda"/>
    </group>
</menu>